@@ -15,6 +15,8 @@
 	* Various cleanup fixes.
 
 	* META: Prepare for new release.
+
+	* tagged cerebro-1-0-0-pre5
 	
 2005-08-15  Albert Chu  <chu11@llnl.gov>
 
